Release Note

* current
  * extracting LB Nr
  * changed panda.py to measure execution time for each call
  * using FileCatalogException as a fatal error for now
  * filling job summary fields for prod_test
  * changed ActiveMQ broker
  * changed to allow users to send prestaging requests to DDM
  * fixed getJob for esmerge to send only successful logs
  * added a protection to reassign JEDI jobs in defined
  * added a protection to AdderGen against esmerge xml
  * fixed es merge job generation
  * changed messages for finished by callback or catalog check
  * introducing multiporcesssing in add.py
  * kill instead of reassign in copyArchive
  * sending jediTaskID to the pilot for anal jobs
  * changed array limit in getEventRanges
  * added FinishedJobsByCallback/Catalog to SLS 
  * fixed EventPicker for fatal errors
  * fixed ES retry for failed jobs
  * reduced interval for catalog check to 4h  
  * introduced --eventPickSkipDaTRI
  * updating task status when EventPicker failed
  * making EventPicker log available to users
  * parsing DN when setting owner in EventPicker
  * reduced sleep interval in AdderAtlas
  * fixed datasetMgr not to delete _sub at dst:
  * fixed location registration for _sub + dst:
  * added updateFailedJobs in SetupperPluginBase
  * extended proxy cache for HPC
  * added changeTaskRamCount and changeTaskWalltime
  * fixed pilot retry to reset endTime error dialog
  * fixed nFilesOnHold for killed merging jobs
  * added protection to AdderGen against immediate XML reading
  * added eventPickNumSites
  * added protection against multiple updateUnmergeDataset calls
  * allowing to use non-T1 SE as destination
  * enabled the rebrokerage for ganga jobs
  * fixed insertTaskParamsPanda for analysis submission with prod role
  * fixed typo in killEventServiceConsumers and killUnusedEventServiceConsumers
  * changed to allow retry of failed analysis jobs while the task is still running